2002-10-31 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Straightforward temporary fixes for swig to build the python wrappers.
        src/Makefile now has a python working entry [by working we mean
        that we can import de shadow classes without errors].

2002-10-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * hashtest.cxx removed (since allready in Test)
      * src/gdcmlib.h renamed to src/gdcm.h
      * src/dcm.i renamed to src/gdcm.i
      * src/Makefile prepared for python wrapping

2002-10-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx :
        - Parsing of header is now separated from loading of element values
          (see gdcmHeader::LoadElements).
        - general clean up of hopefully all file access (creation of
          ReadInt16 and ReadInt32)

2002-10-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx :
        - RecupLgr renamed to FindLength and cut off with new IsAnInteger
          method.
        - SetLgrElem renamed to SetLength
        - GetLgrElem renamed to GetLength
        - ~gdcmHeader() made virtual to pesky warning messages at compile.
      * src/gdcmElValSet.cxx fixed both GetElValue methods
      * Dicts/dicomV3.dic falacious entry [7fe0 0010 OT PXL Pixel Data]
        due to IdoDude was cleaned out.

2002-10-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx RecupLgr split in FindVR and RecupLgr. FindVR
        concentrates on finding the value representation (when it exists).
        RecupLgr now only finds the element value length, and it avoids
        returning the unecessary skL (skipped length).
        Also, offsetCourant was simply removed (with taille_fich) since
        it was redundant with the File position internals (by using
        ftell and fseek). This also made skL (see above in RecupLgr) usage
        jajun.
      * src/gdcmHeaderIdo.cxx src/gdcmIdo.h added. Those files concentrate