@@ -1,21 +1,35 @@
 #include <fstream>
+#include <stdlib.h>  // For getenv
 #include "gdcm.h"
 #include "gdcmUtil.h"
 
+#define PUB_DICT_NAME     "DicomV3Dict"
+#define PUB_DICT_PATH     "../Dicts/"
+#define PUB_DICT_FILENAME "dicomV3.dic"
 
 gdcmDictSet::gdcmDictSet(void) {
+	SetDictPath();
 	if (! LoadDicomV3Dict())
 			  return;
 }
 
-int gdcmDictSet::LoadDicomV3Dict(void) {
-	if (dicts.count(PUBDICTNAME))
-		return 1;
-	return LoadDictFromFile(PUBDICTFILENAME, PUBDICTNAME);
+void gdcmDictSet::SetDictPath(void) {
+	const char* EnvPath = (char*)0;
+	EnvPath = getenv("GDCM_DICT_PATH");
+	if (EnvPath && (strlen(EnvPath) != 0))
+		DictPath = EnvPath;
+	else
+		DictPath = PUB_DICT_PATH;
 }
 
-int gdcmDictSet::LoadDictFromFile(char * FileName, DictKey Name) {
-	gdcmDict *NewDict = new gdcmDict(FileName);
+int gdcmDictSet::LoadDicomV3Dict(void) {
+	if (dicts.count(PUB_DICT_NAME))
+		return 1;
+	return LoadDictFromFile(DictPath + PUB_DICT_FILENAME, PUB_DICT_NAME);
+}
+
+int gdcmDictSet::LoadDictFromFile(string FileName, DictKey Name) {
+	gdcmDict *NewDict = new gdcmDict(FileName.c_str());
 	dicts[Name] = NewDict; 
 }
 
@@ -32,5 +46,5 @@ gdcmDict * gdcmDictSet::GetDict(DictKey DictName) {
 }
 
 gdcmDict * gdcmDictSet::GetDefaultPublicDict() {
-	return GetDict(PUBDICTNAME);
+	return GetDict(PUB_DICT_NAME);
 }
